# Lab-arithmetic-calculator

./: CMakeLists.txt
libs/List/: List.h
libs/Stack/: CMakeLists.txt  Stack.h
libs/TVector/: TVector.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_list.cpp  test_main.cpp  test_stack.cpp  test_tvector.cpp
